# raspberrypi-e-paper-hub

./: CMakeLists.txt  LICENSE  README.md  main.c  make_and_run.sh
lib/: bdf.c  bdf.h  calendar.c  calendar.h
lib/epd/: DEV_Config.c  DEV_Config.h  Debug.h  ER-EPD0583-1.c  ER-EPD0583-1.h  GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h  RPI_sysfs_gpio.c  RPI_sysfs_gpio.h  dev_hardware_SPI.c  dev_hardware_SPI.h
